--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
