Implemented Remote WebDriver

--- a/Configs/Configuration.properties
+++ b/Configs/Configuration.properties
@@ -4,3 +4,4 @@ implicitilyWait=30
 environment=local
 windowMaximize=true
 browser=chrome
+remote_url=https://ondemand.us-west-1.saucelabs.com:443/wd/hub
