--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,11 @@
     <version>3.1.1</version>
    </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
             <version>5.0.6</version>
-        </dependency>
+        </dependency -->
 
         <dependency>
             <groupId>tech.grasshopper</groupId>
