New Assertio added

--- a/Configs/Configuration.properties
+++ b/Configs/Configuration.properties
@@ -3,5 +3,5 @@ AppURL=http://automationpractice.com/index.php
 implicitilyWait=30
 environment=local
 windowMaximize=true
-browser=firefox
+browser=chrome
 remote_url=https://ondemand.us-west-1.saucelabs.com:443/wd/hub
